2002-05-17  Werner Koch  <wk@gnupg.org>

	* t-cms-parser.c (one_file): Use ksba_cms_identify.

2002-05-04  Werner Koch  <wk@gnupg.org>

	* t-dnparser.c (test_1): Add test on empty elements.

2002-03-22  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (print_names): New.
	(list_extensions): Print the CRLdistPoints.

2002-03-13  Werner Koch  <wk@gnupg.org>

	* t-cms-parser.c (one_file): Distinguish between signed and
	enveloped CMS objects.

2002-03-12  Werner Koch  <wk@gnupg.org>

	* t-cms-parser.c (one_file): Detect certs-only messages.
	(print_sexp): Fixed printing of serial number

2002-02-19  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (list_extensions): Print certificatePolicies.

2002-02-07  Werner Koch  <wk@gnupg.org>

	* crl_testpki_testpca.der: New.
	* t-crl-parser.c (main): Changed the default test CRL.

2002-01-23  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (one_file): Print key usage restrictions

2002-01-22  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (list_extensions): New.

2002-01-11  Werner Koch  <wk@gnupg.org>

	* t-crl-parser.c: Add commented test to write a hash log

2002-01-10  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (print_sexp): Replaced with the one from the other
	tests.
	(one_file): Add code to check the public key conversions.

	* t-dnparser.c: New, but we need to define some test cases.

2002-01-05  Werner Koch  <wk@gnupg.org>

	* t-crl-parser.c: New.

2001-12-18  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (main): Depend tests on $srcdir.

2001-12-17  Werner Koch  <wk@gnupg.org>

	* cert-basic.c, t-cms-parser.c (print_integer): Renamed to
	(print_sexp): this and changed all callers.
	

 Copyright 2001, 2002 g10 Code GmbH

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but